--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
     "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ts": "^6.0.0-beta.15",
