--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development nodemon ./bin/www",
     "grunt": "grunt",
     "start": "node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "grunt test",
     "tsc": "tsc",
     "tsc-watch": "tsc -w",
     "setup": "npm install & typings install"
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.28.0",
-    "aws-serverless-express": "^2.1.3",
+    "@types/body-parser": "^1.16.3",
+    "@types/core-js": "^0.9.41",
+    "aws-sdk": "^2.45.0",
+    "aws-serverless-express": "^2.2.0",
     "body-parser": "^1.17.1",
     "claudia-api-builder": "^2.4.1",
     "cookie-parse": "^0.4.0",
@@ -25,10 +27,12 @@
     "dynamodb-atomic-counter": "^0.1.1",
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
+    "gulp-mocha": "^4.3.0",
     "json-loader": "^0.5.4",
-    "method-override": "^2.3.7",
+    "method-override": "^2.3.8",
     "morgan": "^1.8.1",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta9",
+    "typescript": "^2.3.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "0.0.42",
@@ -39,11 +43,16 @@
     "@types/es6-promise": "0.0.32",
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-node": "^5.1.1",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ts": "^6.0.0-beta.15",
+    "grunt-webpack": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-env": "^0.4.0",
     "gulp-mocha": "^4.1.0",
@@ -51,8 +60,16 @@
     "gulp-shell": "^0.6.3",
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.6",
+    "node-gyp": "^3.6.0",
     "nodemon": "^1.11.0",
+    "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
-    "typescript": "^2.2.1"
+    "typescript": "^2.2.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.4",
+    "webpack-fail-plugin": "^1.0.6",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-notifier": "^1.5.0"
   }
 }
