--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/es6-promise": "0.0.32",
     "@types/method-override": "0.0.29",
     "@types/morgan": "^1.7.32",
+    "@types/underscore": "^1.8.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -65,6 +66,7 @@
     "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
+    "underscore": "^1.8.3",
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.4",
